--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
 		"url": "n/a"
 	},
 	"keywords": [
+		"GitHub",
+		"CLI",
+		"GH",
+		"GB",
+		"Workflow",
+		"Template",
+		"repo",
 		"GiterBot",
 		"Indicaza"
 	],
@@ -24,16 +31,14 @@
 		"format": "prettier --write \"./**/*.{js,json}\""
 	},
 	"dependencies": {
-		"chalk": "^5.0.0",
-		"chalk-animation": "^1.3.0",
 		"cli-alerts": "^1.2.2",
 		"cli-handle-error": "^4.4.0",
 		"cli-handle-unhandled": "^1.1.1",
 		"cli-meow-help": "^2.0.2",
 		"cli-welcome": "^2.2.2",
+		"express": "^4.17.2",
 		"figlet": "^1.5.2",
-		"gradient-string": "^2.0.0",
-		"img2ascii": "^1.3.4",
+		"inquirer": "^8.2.0",
 		"meow": "^9.0.0",
 		"nanospinner": "^1.0.0",
 		"nodemon": "^2.0.15",
