--- a/package.json
+++ b/package.json
@@ -36,13 +36,9 @@
 		"cli-handle-unhandled": "^1.1.1",
 		"cli-meow-help": "^2.0.2",
 		"cli-welcome": "^2.2.2",
-		"express": "^4.17.2",
-		"figlet": "^1.5.2",
-		"inquirer": "^8.2.0",
 		"meow": "^9.0.0",
-		"nanospinner": "^1.0.0",
-		"nodemon": "^2.0.15",
-		"prompt-sync": "^4.1.6"
+		"prompt-sync": "^4.1.6",
+		"sqlite3": "^5.0.8"
 	},
 	"devDependencies": {
 		"prettier": "^2.5.1"
