--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # NPM #
 ##########
 # Ignore all directories called node_modules in current folder and any subfolders.
-node_modules/
+../node_modules/
 /node_modules/
 
 # Packages #
@@ -64,7 +64,7 @@ assets/bower_components/*
 /README.html
 
 # PhpStrom Project Files #
-.idea/
+../.idea/
 library/vendors/composer
 assets/img/.DS_Store
 
