--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "GiterBot": "./src/server.js",
     "gb": "./src/server.js",
     "permit": "chmod +x ./src",
-    "qp": "./src/menus/quickactions/quickPush.js"
+    "qp": "src/menus/quickactions/quickPush.js"
   },
   "scripts": {
     "start": "./src/server.js"
