--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "commonjs",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "src/server.js",
+  "main": "src/app.js",
   "author": {
     "name": "Indicaza",
     "email": "indicazas@gmail.com",
@@ -29,17 +29,15 @@
     "repo"
   ],
   "bin": {
-    "GiterBot": "./src/server.js",
-    "gb": "./src/server.js",
-    "permit": "chmod +x ./src",
-    "qp": "src/menus/quickactions/quickPush.js"
+    "GiterBot": "src/app.js",
+    "gb": "src/server.js.js",
+    "permit": "chmod +x ./src"
   },
   "scripts": {
-    "start": "./src/server.js"
+    "start": "src/app.js"
   },
   "dependencies": {
     "prompt-sync": "^4.2.0",
-    "sqlite3": "^5.0.8",
-    "yargs": "^17.5.1"
+    "sqlite3": "^5.0.8"
   }
 }
